# KopalneRzemioslo

./: .gitignore  CMakeLists.txt  KopalneRzemioslo.cbp  KopalneRzemioslo.desktop  Linux.mk  Makefile  README.md  Windows.mk  kopalnerzemioslo.cbp  kopalnerzemioslo.desktop  main.cpp  main.rc
include/: Animation.hpp  Button.hpp  Console.hpp  Crafting.hpp  Dropped.hpp  Game.hpp  Ini.hpp  Inventory.hpp  Items.hpp  Menu.hpp  Player.hpp  World.hpp  resources.hpp  tools.hpp  version.hpp  version.hpp.in
resources/: BlueHighwayPixielated-G8Mm.hpp  Makefile  currentItem.hpp  currentWorldPtr.hpp  cursor.hpp  inventoryBar.hpp  playerX.hpp  playerX.xcf  textures.hpp  textures.xcf
resources/backgrounds/: Makefile  dirtBackground.hpp  mntBackground.hpp  startBackground.hpp
resources/sounds/: Makefile  button.hpp  digging.hpp  gameTheme.hpp  menuTheme.hpp  putting.hpp
resources/sounds/midi/: boss.mid  death.mid  digging.mid  loading.mid  putting.mid  theme2.mid  theme3.mid  theme4.mid
resources/textures/: Makefile  bedrock.hpp  craftingTable.hpp  dirt.hpp  grass.hpp  grassDirt.hpp  leaves.hpp  ledder.hpp  notFound.hpp  plank.hpp  stone.hpp  wood.hpp
resources/textures/breaking/: Makefile  breaking1.hpp  breaking2.hpp  breaking3.hpp  breaking4.hpp  breaking5.hpp  breaking6.hpp
resources/textures/leaves/: Makefile  leaves1.hpp  leaves2.hpp
src/: Animation.cpp  Button.cpp  Console.cpp  Crafting.cpp  Dropped.cpp  Game.cpp  Ini.cpp  Inventory.cpp  Items.cpp  Menu.cpp  Player.cpp  World.cpp  main.cpp  tools.cpp
